--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 click==6.7
 Flask==1.0.2
+Flask-PyMongo==2.1.0
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pymongo==3.7.1
 Werkzeug==0.14.1
